[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-workflow-toolkit"
version = "0.1.0"
description = "CLI installer for QA agent workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "questionary>=2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
qatool = "qa_workflow_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qa_workflow_toolkit = ["assets/**/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = [".git", ".pytest_cache", "pytest-cache-files-*", "work", "outputs"]
